# riscv-image-processing

./: CMakeLists.txt  COMPLETE_LMUL_RESULTS.md  LMUL_ANALYSIS_README.md  LMUL_IMPLEMENTATION_SUMMARY.md  README.md  REALISTIC_LMUL_EXPECTATIONS.md  REGISTER_PRESSURE_ANALYSIS.md  TODAY_RESULTS_SUMMARY.md  VECTOR_INTRINSICS_GUIDE.md  complete_lmul_results_summary.csv  generate_complete_lmul_analysis.py  generate_lmul_graph.py  riscv-toolchain.cmake  run_lmul_analysis.sh  test_box_filter
FactorialRV32/: fact.elf  fact.s
FibRV32/: fib.elf  fib.s
examples/: AddBenchmark.cpp  AddBenchmark_LMUL.cpp  AddWeightedBenchmark.cpp  BilateralFilterTest.cpp  BilteralFilterTestWithMatrix.cpp  BoxFilterBenchmark_LMUL.cpp  BoxFilterBenchmark_LMUL_Simple.cpp  BoxFilterComparison.cpp  FlippingBenchmark.cpp  FlippingBenchmark_LMUL.cpp  GaussianBenchmark.cpp  GaussianBenchmark_LMUL.cpp  GaussianComparison.cpp  LMULBenchmark.cpp  RegisterPressureStressTest.cpp  Rotate&FlipComparison.cpp  RotationBenchmark.cpp  filters_test.cpp  rotate_flip_test.cpp  rotate_test.cpp
lib/: Arithmatic Library Results  CMakeLists.txt
lib/READIT/: NOTES.md  Template_Test.cpp  Test_Similarity.cpp  install_riscv.sh  output_uint16.pgm  output_uint32.pgm  output_uint8.pgm
lib/include/: AddRVV.hpp  BilateralFilter.hpp  BoxFilter_Vector_Notemp.hpp  BoxFilter_Vector_Template.hpp  Flipping.hpp  Flipping_Vector.hpp  Gaussian_Vector.hpp  Rotate.hpp  Rotate_Vector.hpp  VectorTraits.hpp  VectorTraits_LMUL.hpp
lib/src/: AddRVV.cpp  BilateralFilter.cpp  BoxFilter_Vector_Notemp.cpp  BoxFilter_Vector_Template.cpp  Flipping.cpp  Flipping_Vector.cpp  Gaussian_Vector.cpp  Rotate.cpp  Rotate_Vector.cpp
models/: CMakeLists.txt  Complex.cpp  Complex.h  Complex.hpp  Image.cpp  Image.hpp  image.hpp
models/image/: image.hpp  image_reader.cpp  main_test.cpp  tests.cpp
temp-image/: image.cpp  image.hpp  imageReader.cpp  imageReader.hpp  imageWriter.cpp  imageWriter.hpp
tests/: CMakeLists.txt
tests/ref/: BoxFilter.cpp  BoxFilter.h  Gaussian.cpp  Gaussian.hpp  main.cpp  main_test.cpp  rotate.cpp  rotation.h
tests/ref/include/: Add.hpp  BilateralFilter.hpp  BoxFilter.h  BoxFilter.hpp  Flipping.hpp  Gaussian.hpp  rotate.hpp
tests/ref/src/: Add.cpp  BilateralFilter.cpp  BoxFilter.cpp  Flipping.cpp  Gaussian.cpp  Rotate.cpp  rotate.cpp
tests/unit/: 3things.256blur.pgm  3thingsblurGaussian.pgm  Add_tests.cpp  MatlabAddedWeightedImage.pgm  barb.512blur.pgm  barb.512blurGaussian.pgm  box-filter-tests.cpp  box_filter_test.cpp  filtered.pgm  main_test.cpp  main_testGauss.cpp  matlabImage.pgm
utils/: CMakeLists.txt  FFT.cpp  FFT.h  FFT.hpp  Flipping.cpp  Flipping.hpp  ImageReader.cpp  ImageReader.hpp  ImageStatus.cpp  ImageStatus.h  ImageStatus.hpp  ImageWriter.cpp  ImageWriter.hpp  image_reader.cpp  image_reader.hpp  image_status.h  image_status.hpp  image_writer.cpp  image_writer.hpp
vector/: vector.elf  vector.s
